--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <meta name="description" content="Self Developed personal website build with React.js">
 
   <!-- Google / Search Engine Tags -->
-  <meta itemprop="name" content="S0umyajit | Portfolio">
+  <meta itemprop="name" content="L-yes | Portfolio">
   <meta itemprop="description" content="Self Developed personal website build with React.js">
   <meta itemprop="image"
     content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
@@ -20,14 +20,14 @@
   <!-- Facebook Meta Tags -->
   <meta property="og:url" content="https://soumyajit.vercel.app">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="S0umyajit | Portfolio">
+  <meta property="og:title" content="L-yes | Portfolio">
   <meta property="og:description" content="Self Developed personal website build with React.js">
   <meta property="og:image"
     content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="S0umyajit | Portfolio">
+  <meta name="twitter:title" content="L-yes | Portfolio">
   <meta name="twitter:description" content="Self Developed personal website build with React.js">
   <meta name="twitter:image"
     content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
@@ -36,6 +36,30 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.1.0/firebase-analytics.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+  
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    const firebaseConfig = {
+      apiKey: "AIzaSyA9Mor9rJH-h5lGZldzeEKSSvJEt1-t84E",
+      authDomain: "l-yes-portfolio.firebaseapp.com",
+      projectId: "l-yes-portfolio",
+      storageBucket: "l-yes-portfolio.firebasestorage.app",
+      messagingSenderId: "192476447832",
+      appId: "1:192476447832:web:460fe15780df3b94d5b62d",
+      measurementId: "G-0K0QVD2GSX"
+    };
+  
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
+  </script>
 </body>
 
 </html>
