--- a/public/index.html
+++ b/public/index.html
@@ -6,31 +6,41 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="Self Developed personal website build with React.js" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>L-yes | Portfolio</title>
-  <meta name="description" content="Self Developed personal website build with React.js">
+
+  <!-- Ajout du script de redirection pour GitHub Pages -->
+  <script type="text/javascript">
+    (function(l) {
+      if (l.search[1] === '/' ) {
+        var decoded = l.search.slice(1).split('&').map(function(s) { 
+          return s.replace(/~and~/g, '&')
+        }).join('?');
+        window.history.replaceState(null, null,
+            l.pathname.slice(0, -1) + decoded + l.hash
+        );
+      }
+    }(window.location))
+  </script>
 
   <!-- Google / Search Engine Tags -->
   <meta itemprop="name" content="L-yes | Portfolio">
-  <meta itemprop="description" content="Self Developed personal website build with React.js">
-  <meta itemprop="image"
-    content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
+  <meta itemprop="description" content="Welcome to my personal website!">
+  <meta itemprop="image" content="%PUBLIC_URL%/static/media/avatar_man.ada500287697511ef53b89d602d09ea1.svg">
 
   <!-- Facebook Meta Tags -->
-  <meta property="og:url" content="https://soumyajit.vercel.app">
+  <meta property="og:url" content="https://ilyassoh.github.io/lyes-portfolio">
   <meta property="og:type" content="website">
   <meta property="og:title" content="L-yes | Portfolio">
-  <meta property="og:description" content="Self Developed personal website build with React.js">
-  <meta property="og:image"
-    content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
+  <meta property="og:description" content="Welcome to my personal website!">
+  <meta property="og:image" content="%PUBLIC_URL%/static/media/avatar_man.ada500287697511ef53b89d602d09ea1.svg">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="L-yes | Portfolio">
-  <meta name="twitter:description" content="Self Developed personal website build with React.js">
-  <meta name="twitter:image"
-    content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
+  <meta name="twitter:description" content="Welcome to my personal website!">
+  <meta name="twitter:image" content="%PUBLIC_URL%/static/media/avatar_man.ada500287697511ef53b89d602d09ea1.svg">
 </head>
 
 <body>
