--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
+  <link rel="icon" href="avatar_man.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Self Developed personal website build with React.js" />
+  <meta name="description" content="Welcome to my personal website!" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>L-yes | Portfolio</title>
 
@@ -27,20 +27,20 @@
   <!-- Google / Search Engine Tags -->
   <meta itemprop="name" content="L-yes | Portfolio">
   <meta itemprop="description" content="Welcome to my personal website!">
-  <meta itemprop="image" content="%PUBLIC_URL%/static/media/avatar_man.ada500287697511ef53b89d602d09ea1.svg">
+  <meta itemprop="image" content="%PUBLIC_URL%/avatar_man.svg">
 
   <!-- Facebook Meta Tags -->
   <meta property="og:url" content="https://ilyassoh.github.io/lyes-portfolio">
   <meta property="og:type" content="website">
   <meta property="og:title" content="L-yes | Portfolio">
   <meta property="og:description" content="Welcome to my personal website!">
-  <meta property="og:image" content="%PUBLIC_URL%/static/media/avatar_man.ada500287697511ef53b89d602d09ea1.svg">
+  <meta property="og:image" content="%PUBLIC_URL%/avatar_man.svg">
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="L-yes | Portfolio">
   <meta name="twitter:description" content="Welcome to my personal website!">
-  <meta name="twitter:image" content="%PUBLIC_URL%/static/media/avatar_man.ada500287697511ef53b89d602d09ea1.svg">
+  <meta name="twitter:image" content="%PUBLIC_URL%/avatar_man.svg">
 </head>
 
 <body>
