--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="avatar_man.svg" />
+  <link rel="icon" href="%PUBLIC_URL%/avatar_man.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Welcome to my personal website!" />
@@ -27,20 +27,21 @@
   <!-- Google / Search Engine Tags -->
   <meta itemprop="name" content="L-yes | Portfolio">
   <meta itemprop="description" content="Welcome to my personal website!">
-  <meta itemprop="image" content="%PUBLIC_URL%/avatar_man.svg">
+  <meta itemprop="image" content="https://ilyassoh.github.io/lyes-portfolio/avatar_man.svg">
 
   <!-- Facebook Meta Tags -->
   <meta property="og:url" content="https://ilyassoh.github.io/lyes-portfolio">
   <meta property="og:type" content="website">
   <meta property="og:title" content="L-yes | Portfolio">
   <meta property="og:description" content="Welcome to my personal website!">
-  <meta property="og:image" content="%PUBLIC_URL%/avatar_man.svg">
+  <meta property="og:image" content="https://ilyassoh.github.io/lyes-portfolio/avatar_man.svg">
+  <meta name="author" content="L-yes"> 
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="L-yes | Portfolio">
   <meta name="twitter:description" content="Welcome to my personal website!">
-  <meta name="twitter:image" content="%PUBLIC_URL%/avatar_man.svg">
+  <meta name="twitter:image" content="https://ilyassoh.github.io/lyes-portfolio/avatar_man.svg">
 </head>
 
 <body>
