--- a/public/404.html
+++ b/public/404.html
@@ -2,8 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>L-yes Portfolio</title>
     <script type="text/javascript">
+      // Single Page Apps for GitHub Pages
+      // https://github.com/rafgraph/spa-github-pages
       var pathSegmentsToKeep = 1;
       var l = window.location;
       l.replace(
@@ -16,5 +19,6 @@
     </script>
   </head>
   <body>
+    <p>Redirecting...</p>
   </body>
 </html> 
